disable java 21 warning